--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="Accountcreated">Account created !</string>
     <string name="Accountcreationfailed">Account creation failed !!</string>
     <string name="RegisterComplete">Register Complete !!</string>
+    <string name="doc">Docs &amp; Requirements</string>
+    <string name="responsabilities">This documents don\'t take away the responsabilitie of read the notice!</string>
 </resources>
