--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -31,4 +31,5 @@
     <string name="responsabilities">Estes documentos não tiram a responsabilidade de ler o edital!</string>
     <string name="score">PONTUAÇÃO</string>
     <string name="ready">Esteja pronto para qualquer desafio !</string>
+    <string name="desc">Descrição</string>
 </resources>
