--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="responsabilities">This documents don\'t take away the responsabilitie of read the notice!</string>
     <string name="score">SCORE</string>
     <string name="ready">Be ready for any challanges !</string>
+    <string name="desc">Description</string>
 </resources>
